--- a/app/main.css
+++ b/app/main.css
@@ -1,8 +1,23 @@
+body {
+  background: #999;
+}
 div:focus, button, a, button:focus, button:active, a:active, a:focus {
   outline: none !important;
 }
 div#content {
-  border:1px solid #666;
+  background-color:white;
+  border:3px solid #666;
   height: 1000px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, .5)
+}
+
+a.card:active, a.card:hover, a.card:focus {
+  background-color: #2780e3;
+  color:#ff9999;
+}
+
+a.card.bg-success, a.card:active.bg-success, a.card:hover.bg-success, a.card:focus.bg-success {
+  background-color: #3fb618;
+  color:#ffffff;
 }
